# text-duplicate-finder

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: deployment.md
src/: __init__.py  embeddings.py  main.py  models.py
tests/: __init__.py  test_api.py  test_embeddings.py
